# scrapesuite

./: .gitignore  BLIND_TEST_GUIDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  INSTALLATION.md  MANUAL_TESTING.md  Makefile  QUICKSTART.md  README.md  REFACTOR_SUMMARY.md  USAGE_GUIDE.md  cfpb.csv  noaa.html  nyt_get_html.html  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  ruffcheck.txt  scrapesuite_cleanup.txt  scrapesuite_conscientious_prompt.txt  scrapesuite_eod_directive.txt  scrapesuite_master_directive.txt  test.csv  test_fda_inspector.py  ust.csv  ust.jsonl  ust_polished.jsonl  weather.html
.github/workflows/: ci.yml  release.yml
config/: routing.json
data/cache/: robots.sqlite  state.sqlite
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  DEPLOY.md  DEPLOYMENT_ROADMAP.md  FOUNDRY_COMPLETE.md  FRAMEWORK_INTEGRATION.md  FRAMEWORK_PROFILES.md  IMPLEMENTATION_SUMMARY.md  INFINITE_SCROLL_API_GUIDE.md  MODERN_FRAMEWORKS.md  MVP_COMPLETE.md  QUARRY_COMPLETE.md  README.md  SECURITY.md  SELECTOR_QUICK_REFERENCE.md  TESTING.md  TROUBLESHOOTING.md  USER_TESTING_PLAN.md  WIZARD.md
docs/archive/: ARCHITECTURE.md  CLEANUP_PLAN.md  CONNECTOR_GENERATOR_SUMMARY.md  FRAMEWORK_INTEGRATION.md  FRAMEWORK_PROFILES_ANALYSIS.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  QUICK_TEST.md  SESSION_2025-11-09.md  SESSION_NOTES.md  TESTING_QUICK_START.md  WIZARD_DEVELOPMENT_LOG.md  YAML_SELECTORS_VISION.md
examples/: use_selector_utilities.py
examples/jobs/: fda.yml  fda_recalls.yml  nws.yml
examples/schemas/: hackernews.yml  nyt_resilient.yml  weather_simple.yml
profiles/shared/: prelude.md
profiles/templates/: ai-integrations-engineer.yaml  api-integrations---full-stack.yaml  auth---oauth---jwt.yaml  backend-(django).yaml  backend-(node.js).yaml  brainstorming.yaml  content-creator-(technical-&-marketing).yaml  context-&-ledger-manager.yaml  data-analytics-(product-marketing).yaml  design---architecture.yaml  developer-relations.yaml  development-(general).yaml  devops-&-sre-(deployment-maintenance).yaml  docker---containerization.yaml  documentation-&-knowledge-base.yaml  e-commerce-optimizer.yaml  javascript-typescript-specialist.yaml  marketing-strategist.yaml  nosql-engineer.yaml  orchestrator---dispatcher.yaml  planning.yaml  product-manager.yaml  python-specialist.yaml  react-frontend-engineer.yaml  requirements.yaml  security-engineer.yaml  social-media-manager.yaml  sql-engineer.yaml  testing-&-qa.yaml  ux---design-research.yaml
quarry/: __init__.py  __main__.py  cli.py  core.py  inspector.py  quarry.py  wizard.py
quarry/connectors/: custom.py  fda.py  generic.py  nws.py
quarry/framework_profiles/: __init__.py  base.py
quarry/lib/: __init__.py  bs4_utils.py  http.py  logging.py  policy.py  prompts.py  robots.py  schemas.py  selectors.py  session.py
quarry/transforms/: base.py  generic.py
schemas/: cfpb.yml  ncpr.yml
scrapesuite/: __init__.py  __main__.py  cli.py  core.py  detection_strategies.py  foundry.py  framework_profiles.py  http.py  inspector.py  policy.py  state.py  wizard.py
scrapesuite/connectors/: base.py  custom.py  fda.py  generic.py  nws.py
scrapesuite/framework_profiles/: __init__.py  base.py
scrapesuite/lib/: http.py  ratelimit.py  selectors.py
scrapesuite/sinks/: __init__.py  base.py  csv.py  parquet.py
scrapesuite/transforms/: __init__.py  base.py  custom.py  (+2 more)
scripts/: audit_schema_selectors.py  build_batches.py  profile_framework_detection.py  test_workflow.py
tests/: test_bi_use_cases.py  test_blueprint.py  test_crate.py  test_edge_cases.py  test_excavate.py  test_expanded_fields.py  test_field_editor.py  test_forge.py  test_framework_boosting.py  test_framework_scoring.py  test_generic_connector.py  test_http_bot_evasion.py  test_new_framework_profiles.py  test_parsers.py  test_polish.py  test_probe.py  test_prompts.py  test_ratelimit.py  test_run_job.py  test_scout.py  test_selector_builder.py  test_selector_detection.py  test_ship.py  test_state.py  test_wizard_smoke.py
(+82 files in other folders)
