[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapesuite"
description = "A reusable Python toolkit for web/data collection with offline-first testing"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "pyarrow",
    "pyyaml",
    "typer",
    "questionary",
    "pydantic",
    "rich",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PL", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing - will enable module by module
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Disabled during gradual migration
strict_equality = true

# Per-module options for gradual typing
[[tool.mypy.overrides]]
module = "scrapesuite.framework_profiles.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "scrapesuite.http"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# External dependencies without type stubs
[[tool.mypy.overrides]]
module = [
    "bs4.*",
    "questionary.*",
    "pyarrow.*",
]
ignore_missing_imports = true

